Archive2/66/c59a76ae143a49/output
main.cpp: In instantiation of 'struct prank<>':
main.cpp:16:10:   recursively required from 'struct prank<std::allocator<int> >'
main.cpp:16:10:   required from 'struct prank<std::list<int, std::allocator<int> > >'
main.cpp:21:26:   required from here
main.cpp:9:5: error: static assertion failed: OH NO!
     static_assert(sizeof...(Args) == 999999, "OH NO!");
     ^
